<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:layout_marginBottom="8dp">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@android:color/white">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/address_detail_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Address Details"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:background="@android:color/white"
        android:layout_marginBottom="1dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@android:color/white">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/address_default_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/default_address_prompt"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_edit_prompt"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="32dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/address_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_delete_prompt"
            android:textColor="@android:color/holo_red_light"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>