<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.personal.NotLoggedInFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@android:color/white">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/personal_login_phone_btn"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:text="账号登录"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_auto_end_semicircle"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_other_login"
            android:layout_marginTop="32dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/personal_login_wechat_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_wechat_circle_primary_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wechat_title"
                    android:textColor="@color/colorAccent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/personal_login_google_plus__btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_google_plus_circle_primary_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google_plus_title"
                    android:textColor="@color/colorAccent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/personal_login_qq_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_qq_circle_primary_24dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qq_title"
                    android:textColor="@color/colorAccent"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>