<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.GoodDetailActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/good_detail_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/good_detail_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_detail_tab_action_good"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_detail_tab_action_style"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/light_gray">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/good_detail_show_iv"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/good_detail_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="24sp"
                    android:padding="8dp"
                    android:textColor="@android:color/black"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:padding="8dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="￥"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/good_detail_price_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="28sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:layout_marginTop="8dp"
                android:padding="16dp">
                <com.dustoreapplication.android.view.LogoCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:logo="@drawable/ic_hot_black_24dp"
                    app:title="时下热门"/>
                <com.dustoreapplication.android.view.LogoCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:logo="@drawable/ic_discount_black_24dp"
                    app:title="打折促销"/>
                <com.dustoreapplication.android.view.LogoCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:logo="@drawable/ic_not_visible_black_24dp"
                    app:title="匿名购物"/>
                <com.dustoreapplication.android.view.LogoCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:logo="@drawable/ic_vip_black_24dp"
                    app:title="正品保障"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="16dp">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/good_detail_related_title"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="全部商品"
                        android:gravity="center"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_arrow_right_gray_24dp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/good_detail_related_vp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@android:color/white">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="bottom">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="商品评价"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginEnd="4dp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/good_detail_evaluation_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="(253)"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/good_detail_evaluation_ratio_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="的人觉得尺码合适"
                        android:gravity="center_vertical"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/ic_arrow_right_gray_24dp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/good_detail_evaluation_target_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/good_detail_info_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:padding="8dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginEnd="16dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/ic_collection_black"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_detail_collection"
                android:textColor="@android:color/black"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/good_detail_sell"
            android:textSize="16sp"
            android:background="@drawable/shape_rectangle_gray_stroke"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginEnd="16dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/good_detail_buy_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/good_detail_buy"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/shape_rectangle_radius"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>