<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".ui.activity.SecurityActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/security_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:title="账号安全"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/light_gray">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@android:color/white">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="16dp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bind_phone_prompt"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/security_phone_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/light_gray"
                        android:textStyle="bold"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_phone_prompt"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"/>
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/security_change_phone_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@drawable/ic_arrow_right_gray_24dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.dustoreapplication.android.view.SettingButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingShowLabel="设置登录密码"
                android:background="@android:color/white"
                android:layout_marginTop="1dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bind_third_prompt"
                android:padding="16dp"/>
            <com.dustoreapplication.android.view.ThirdPartyBindButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thirdShowLabel="微信"
                app:icon="@drawable/ic_wechat_circle_primary_24dp"
                app:uncheckedTextColor="@android:color/darker_gray"
                app:uncheckedButtonColor="@android:color/white"
                app:checkedTextColor="@color/colorPrimaryDark"
                app:checkedButtonColor="@color/colorAccent"
                app:isBinding="true"/>
            <com.dustoreapplication.android.view.ThirdPartyBindButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thirdShowLabel="QQ"
                app:icon="@drawable/ic_qq_circle_primary_24dp"
                app:uncheckedTextColor="@android:color/darker_gray"
                app:uncheckedButtonColor="@android:color/white"
                app:checkedTextColor="@color/colorPrimaryDark"
                app:checkedButtonColor="@color/colorAccent"/>
            <com.dustoreapplication.android.view.ThirdPartyBindButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thirdShowLabel="微博"
                app:icon="@drawable/ic_google_plus_circle_primary_24dp"
                app:uncheckedTextColor="@android:color/darker_gray"
                app:uncheckedButtonColor="@android:color/white"
                app:checkedTextColor="@color/colorPrimaryDark"
                app:checkedButtonColor="@color/colorAccent"/>
            <com.dustoreapplication.android.view.SettingButton
                android:id="@+id/security_logout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:settingShowLabel="注销用户"
                android:layout_marginTop="8dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>